Fixing product-item styling alignment

--- a/_sass/product/product-item-category.sass
+++ b/_sass/product/product-item-category.sass
@@ -35,12 +35,12 @@ body
         height: 40px
       p
         margin: 0
-@media screen and (max-width: 992px)
-#productCategory
-  .category-menu-container
-    .category-menu
-      img
-        display: none
+@media (max-width: 992px)
+  #productCategory
+    .category-menu-container
+      .category-menu
+        img
+          display: none
 
 @media (max-width: 767px)
   .category-menu
